[tool.poetry]
name = "runwhenlocal"
version = "1.0.0"
description = "RunWhen Local"
authors = ["Kyle Forster <kyle.forster@runwhen.com>",
           "Rob Vaterlaus <rob.vaterlaus@runwhen.com",
           "Shea Stewart <shea.stewart@runwhen.com"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
Django = "^5.1"
django-extensions = "^3.1.3"
djangorestframework = "^3.15.2"
kubernetes = "^33.0.0"
robotframework = "==7.3.2"
GitPython = "^3.1.43"
jinja2 = "^3.1"
jsonschema = "^4.21"
boto3 = "^1.34"
azure-identity = "^1.19"
azure-mgmt-resource = "^24.0.0"
azure-mgmt-containerservice = "^39.0.0"
azure-devops = "^7.1.0b1"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
