[tool.poetry]
name = "runwhenlocal"
version = "1.0.0"
description = "RunWhen Local"
authors = ["Kyle Forster <kyle.forster@runwhen.com>",
           "Rob Vaterlaus <rob.vaterlaus@runwhen.com",
           "Shea Stewart <shea.stewart@runwhen.com"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
fastapi = "^0.115.0"
uvicorn = {version = "^0.34.0", extras = ["standard"]}
httpx = "^0.28.0"
kubernetes = "^36.0.0"
robotframework = "==7.3.2"
GitPython = "^3.1.43"
jinja2 = "^3.1"
jsonschema = "^4.21"
boto3 = "^1.34"
azure-identity = "^1.19"
azure-mgmt-resource = "^26.0.0"
azure-mgmt-containerservice = "^41.0.0"
azure-mgmt-compute = "^38.0.0"
azure-mgmt-storage = "^25.0.0"
azure-mgmt-network = "^31.0.0"
azure-mgmt-keyvault = "^14.0.1"
azure-mgmt-web = "^11.0.0"
azure-mgmt-rdbms = "^10.1.1"
azure-mgmt-redis = "^14.5.0"
azure-mgmt-servicebus = "^10.0.0"
azure-mgmt-datafactory = "^10.0.0"
azure-mgmt-containerregistry = "^15.0.0"
azure-mgmt-apimanagement = "^5.0.0"
azure-mgmt-cosmosdb = "^10.0.0"
azure-mgmt-azurearcdata = "^1.0.1"
azure-devops = "^7.1.0b1"
google-auth = "^2.38.0"
google-cloud-asset = "^4.0.0"
google-cloud-compute = "^1.23.0"
google-cloud-storage = "^3.0.0"
google-cloud-container = "^2.56.0"
google-cloud-pubsub = "^2.21.0"
google-cloud-iam = "^2.15.0"
mcp = "^1.27.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
